--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -67,9 +69,7 @@ code {
   justify-content: space-around;
 }
 
-.ServicesSol {
-  margin-top: 0.5rem;
-}
+
 
 .ServicesSag {
   display: flex;
@@ -117,15 +117,17 @@ code {
 
 .SWebSeiteDesign {
   border: 1px solid;
-  padding: 0.5rem;
+  padding: 0.3rem;
   background-color: #f9fafa;
+  height: 7.5rem;
 }
 
 .SWebSeiteMaintenance {
   margin-top: 0.5rem;
   border: 1px solid;
-  padding: 0.5rem;
+  padding: 0.3rem;
   background-color: #f9fafa;
+  height: 7rem;
 }
 
 .SWebsiteHosting {
